--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -4,7 +4,7 @@
     padding: 1vmax;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: center !important;
     align-items: center;
     border-bottom: 1px solid rgba(43, 43, 43, 0.137);
 }
